--- a/04_Regional_Climate_Trends/Guides/4_Communicating_Climate_Trends.Rnw
+++ b/04_Regional_Climate_Trends/Guides/4_Communicating_Climate_Trends.Rnw
@@ -9,7 +9,7 @@
     citecolor=violet
 }
 %\usepackage{comment}
-
+\usepackage{xurl}
 \usepackage[dvipsnames]{xcolor}
 \colorlet{LightRubineRed}{RubineRed!100}
 \definecolor{mypink2}{RGB}{219, 48, 122}
