update marginal progress

--- a/04_Regional_Climate_Trends/Guides/MarcsTemplate.Rmd
+++ b/04_Regional_Climate_Trends/Guides/MarcsTemplate.Rmd
@@ -19,7 +19,7 @@ source("/home/mwl04747/RTricks/04_Regional_Climate_Trends/Guides/Guide1functions
 
 ## Chunk 2
 ```{r}
-my.state = "VT"
+my.state = "CA"
 filename.csv <- "/home/mwl04747/RTricks/04_Regional_Climate_Trends/stations.active.oldest.csv"
 my.inventory <- readInventory.fun(filename.csv, my.state)
 ```
@@ -34,6 +34,100 @@ downloadStations.fun(datapath, my.inventory)
 
 ## Chunk 1
 
+```{r cars}
+source("/home/mwl04747/RTricks/04_Regional_Climate_Trends/Guides/Guide2functions.R")
+```
+
+## Chunk 2
+```{r}
+datafolder = "/home/mwl04747/RTricks/04_Regional_Climate_Trends/Data/SP24/"
+ReadStations2.fun(datafolder)
+```
+
+## Chunk 3
+```{r}
+# sortstations.fun() Nor working yet. 
+```
+
+## Chunk 4
+```{r}
+USC00042294a <- fixDates.fun(USC00042294)
+
+```
+
+## Chunk 5
+```{r}
+coverage.fun(USC00042294a)
+```
+
+## Chunk 6
+```{r}
+USC00042294b <- fixValues.fun(USC00042294a)
+```
+
+## Chunk 7
+```{r}
+QAQC.fun(USC00042294b)
+```
+
+## Chunk 8
+```{r}
+USC00042294.monthly <- MonthlyValues.fun(USC00042294b)
+USC00042294.normals <- MonthlyNormals.fun(USC00042294b)
+```
+
+
+## Chunk 9
+```{r}
+USC00042294.anomalies <- MonthlyAnomalies.fun(USC00042294.monthly, USC00042294.normals)
+```
+
+
+# Guide 3
+
+## Chunk 1
+```{r}
+source("/home/mwl04747/RTricks/04_Regional_Climate_Trends/Guides/Guide3functions.R")
+```
+
+## Chunk 2
+```{r}
+
+
+```
+
+## Chunk 3
 ```{r}
 ```
+
+# Guide 4
+
+## Chunk 1
+```{r}
+source("/home/mwl04747/RTricks/04_Regional_Climate_Trends/Guides/Guide4functions.R")
+```
+
+## Chunk 2
+```{r}
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
